update ignore list

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script>
 var viewer = OpenSeadragon({
     id: 'viewer',
-    prefixUrl: './images/',
+    prefixUrl: './lib/images/',
     showNavigator:  true,
     tileSources: {
         Image: {
